--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
 
     <application
         android:name=".ClientApplication"
@@ -29,6 +30,10 @@
         <activity android:name=".main.ClientActivity" ></activity>
 
         <activity android:name=".grant.GrantActivity"></activity>
+
+        <activity android:name=".main.UserActivity"></activity>
+
+        <activity android:name=".main.SettingActivity"></activity>
 
     </application>
 
