--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation 'org.greenrobot:greendao:3.2.2'
     compile 'com.android.volley:volley:1.1.0'
     implementation project(':qrcodescannner')
+    implementation 'com.android.support:gridlayout-v7:27.1.1'
 }
