--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,21 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".ClientApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo32"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo32"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:replace="android:icon"
+        >
         <activity
-            android:name=".login.LoginActivity"
+            android:name=".login.StartActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +28,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".login.LoginActivity"></activity>
 
         <activity android:name=".login.RegisterActivity"></activity>
 
@@ -44,6 +50,22 @@
         <activity android:name=".main.Point2BalanceActivity"></activity>
 
         <activity android:name=".main.BalanceActivity"></activity>
+
+        <activity android:name=".main.BalanceDetailActivity"></activity>
+
+        <activity android:name=".main.PointDetailActivity"></activity>
+
+        <activity android:name=".main.DiscountActivity"></activity>
+
+        <activity android:name=".main.DiscountStoreActivity"></activity>
+
+        <activity android:name=".main.AvatarActivity"></activity>
+
+        <activity android:name=".payment.BPayActivity"></activity>
+
+        <activity android:name=".main.ModifyPayPasswordActivity"></activity>
+
+        <activity android:name=".main.AboutActivity"></activity>
 
     </application>
 
